--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,12 @@ plugins {
     id 'java'
 }
 
+compileJava.options.encoding = 'UTF-8'
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
 group = 'com.training'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
