--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.2.6.RELEASE'
+// https://mvnrepository.com/artifact/org.aspectj/aspectjtools
+    compile group: 'org.aspectj', name: 'aspectjtools', version: '1.8.9'
 
 }
 
